--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<ul type=none>
 			<li><a href="aula01/index.html">Aula 1</a></li>
 			<li><a href="aula02/index.html">Aula 2</a></li>
+			<li><a href="aula03/index.html">Aula 3</a></li>
 		</ul>
 	</body>
 </html>
