--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<li><a href="aula01/index.html">Aula 1</a></li>
 			<li><a href="aula02/index.html">Aula 2</a></li>
 			<li><a href="aula03/index.html">Aula 3</a></li>
+			<li><a href="aula04/index.html">Aula 4</a></li>
 		</ul>
 	</body>
 </html>
